--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.icq.imagecolorquantizer'
-    mainClass = 'com.icq.imagecolorquantizer.HelloApplication'
+    mainClass = 'com.icq.imagecolorquantizer.App'
 }
 
 javafx {
